added github link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             </center>
         </div>
         <span id='reference'>what's up?</span>
+        <span id='forkit'>fork me in the <a href="https://github.com/artsince/grey-shades-of-fifty" target="_blank"><strong>github</strong></a></span>
         <script type="text/javascript" src='js/main.js'></script>
     </body>
 </html>
