adjusted the pun

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <span id='instructions'>move the mouse</span>
             </center>
         </div>
-        <span id='forkit'>fork me in the <a href="https://github.com/artsince/grey-shades-of-fifty" target="_blank"><strong>github</strong></a></span>
+        <span id='forkit'>fork me in (the) <a href="https://github.com/artsince/grey-shades-of-fifty" target="_blank"><strong>github</strong></a></span>
         <script type="text/javascript" src='js/main.js'></script>
     </body>
 </html>
